--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <div class="h-medio">
       <div class="h-navybar">
         <ul class="nav-list">
-          <li class="nav-item"><a href="../views/index.html">Home</a></li>
+            <li class="nav-item"><a href="../index.html">Home</a></li>
           <li class="nav-item"><a href="../views/carrinho.html">Produtos</a></li>
           <li class="nav-item"><a href="../views/about.html">Sobre</a></li>
           <li class="nav-item"><a href="../views/contact.html">Contato</a></li>
