--- a/trendings/trend3.html
+++ b/trendings/trend3.html
@@ -65,7 +65,7 @@
             <p class="descricao_container_trend">Como o hexa não veio em 2022, estamos lançando a camisa "Em 2026 o hexa vem" Mas porque estamos lançando esta camisa agora? Por que o brasileiro é um povo que nunca perde a esperança que dias melhores virão e que acredita na nossa seleção, pois nós somos o país do futebol.  </p>
 <br>
             <h2 class="titulo_container_trend">Quer participar desse lançamento?</h2>
-            <p class="descricao_container_trend">É super simples! Basta você se cadastrar em nosso site deixar as suas medidas que um dos nossos vendedores irá entrar em contato com você. Não fique por fora dessa e seja o primeiro a mostrar o seu amor a camisa e seu apoio para a nossa seleção. </p>
+            <p class="descricao_container_trend">É super simples, Basta você se cadastrar em nosso site deixar as suas medidas que um dos nossos vendedores irá entrar em contato com você. Não fique por fora dessa e seja o primeiro a mostrar o seu amor a camisa e seu apoio para a nossa seleção. </p>
          </div>
          <div class="div_img_trend">
             <img src="../images/trendBr.jpeg"atl="imagem de jogador com bola debaixo do braço" class="img_container_trend">
